# Producto-Datos-ML-API

./: .gitignore  DEPLOYMENT.md  Intrucciones.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.venv_nb/: pyvenv.cfg
.venv_nb/Scripts/: activate  activate.bat
app/: indices.py  main.py  model_service.py  schemas.py
client/: client.py
configs/: config.example.yaml
docs/: API_CONTRACT.md  STRUCTURE.md
models/: labels.json
notebooks/: Tarea_4A_Computer_Vision_satellite-images-classification.ipynb
scripts/: convert_to_tflite.py  export_requirements.ps1  verify_deployment.py
src/producto_datos_ml_api/: __init__.py
tests/: test_api.py
